Closed
Bug 82461
Opened 24 years ago
Closed 24 years ago
Offline: Crash in this case sending msg with inaccessible web page
Categories
(MailNews Core :: Composition, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.1
People
(Reporter: laurel, Assigned: bugzilla)
Details
(Keywords: crash, Whiteboard: [nsbeta1+] Fix in hand)
Attachments
(3 files)
9.64 KB,
text/plain
|
Details | |
932 bytes,
patch
|
Details | Diff | Splinter Review | |
1.19 KB,
patch
|
Details | Diff | Splinter Review |
Using may23 commercial build
This is probably just an extended circumstance of bug 82460, but thought I'd log
it separately since it crashes and involves certain other steps.
Steps:
1. Go to mail window, login to (IMAP) account.
2. Go offline, don't download.
3. New Msg, type addressee, subject, body text.
4. File|Attach Web Page. Type a url (valid or bogus) in the text field, OK.
URL appears in the attachment list.
5. Select the url in the attachment list and press delete on your keyboard.
Attachment entry is deleted.
6. File|Attach Web Page. Type a (valid or bogus) url which is inacessible/not
cached in the text field. URL appears in attachment list.
7. Click Send(Later). Crashes.
Result: crash.
Keywords: nsbeta1
Summary: Offline: Crash in this case sending msg with inaccessible web page → Offline: Crash in this case sending msg with inaccessible web page
Comment 1•24 years ago
|
||
this isn't offline per se - it's message | send later which is part of message
composition/sending. When you're offline, http urls just fail immediately. If
the server was down, you'd fail as well.
Assignee: bienvenu → ducarroz
Component: Offline → Composition
Assignee | ||
Comment 3•24 years ago
|
||
Looks like the attachment handler get deleted but the url fetcher doesn't know about it. I think I'll have finally to
convert nsMsgAttachmentHandler to an true XPCOM object.
Status: NEW → ASSIGNED
Comment 4•24 years ago
|
||
moving to 0.9.1. It seems like this would be reasonably easy to hit for an
offline user.
Are steps 4-5 necessary or is just step 6 sufficient?
Priority: -- → P1
Whiteboard: [nsbeta1+]
Target Milestone: --- → mozilla0.9.1
If you just delete the first attachment url then Send(Later) it saves to unsent
fine, no crash, no hang. You have to do step 6.
Assignee | ||
Comment 7•24 years ago
|
||
Assignee | ||
Comment 8•24 years ago
|
||
The fix is to fully initialize the url fetcher before we call OpenURI. This use to work because OpenURI was never
calling back the listener synchroulsy. It's not true anymore.
This is a 100% safe fix.
Assignee | ||
Comment 9•24 years ago
|
||
I see this crash when replying to some message too, while being online!
Comment 10•24 years ago
|
||
r=varada
But it is suprising that it was working for this long if this is the case:)
Assignee | ||
Comment 11•24 years ago
|
||
As long OpenURI return before OnStartRequest or OnStopRequest are called, we are
OK.
Comment 12•24 years ago
|
||
who else calls nsURLFetcher::Initialize()?
if no one else, you can remove the checks to see if fOut is non-null and open,
since you're already doing that at the start of FileURLRequest(). no need to do
it again. then, you can fix the return type to be void.
if someone else calls nsURLFetcher::Initialize(), there might be other problems.
if fOut is null or if the stream isn't open, mOutStream, TagData and mCallBack
will not be initialized. is that what you want?
Assignee | ||
Comment 13•24 years ago
|
||
There is a path in nsMsgAttachmentHandler::SnarfMsgAttachment where instead of
calling nsURLFetcher::FireURLRequest, we call messageService->DisplayMessage. In
this case, we have to call manually nsURLFetcher::Initialize.
Anyway, I can cleanup nsURLFetcher::FireURLRequest to address Seth concern. New
patch coming soon...
Assignee | ||
Comment 14•24 years ago
|
||
Comment 15•24 years ago
|
||
sr=sspitzer
Comment 16•24 years ago
|
||
a= asa@mozilla.org for checkin to 0.9.1
Assignee | ||
Comment 17•24 years ago
|
||
Fixed and checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 18•24 years ago
|
||
adding lrg to cc. please verify for gchan.
Comment 19•24 years ago
|
||
Verified in Windows with 2001060408 build
Verified in Linux with 2001060411 build
Verified in MacOS with 20010600408 build
Status: RESOLVED → VERIFIED
Keywords: vtrunk
Updated•20 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•