Fix for bug 82461. Need to complete the initialization of the url fetcher before calling OpenURI else... boom! R=varada, SR=sspitzer, A=asa@mozilla.org